# InterpolatePy

./: .gitignore  .pre-commit-config.yaml  ALGORITHMS.md  CLAUDE.md  README.md  codecov.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: FUNDING.yml
.github/workflows/: docs.yml  documentation.yml  pre-commit.yml  publish.yml  test.yml
cpp/: CMakeLists.txt
cpp/bindings/: CMakeLists.txt  bind_acc_splines.cpp  bind_bspline.cpp  bind_cubic_spline.cpp  bind_motion.cpp  bind_paths.cpp  bind_quaternion.cpp  bind_smoothing_search.cpp  bind_smoothing_spline.cpp  bind_tridiagonal.cpp  module.cpp
cpp/cmake/: InterpolateCppConfig.cmake.in  version.hpp.in
cpp/examples/: CMakeLists.txt  basic_spline.cpp  bspline_approx_smooth_example.cpp  bspline_cubic_example.cpp  bspline_example.cpp  bspline_interpolator_example.cpp  concepts_example.cpp  cubic_smoothing_example.cpp  cubic_spline_acc1_example.cpp  cubic_spline_acc2_example.cpp  cubic_spline_example.cpp  double_s_example.cpp  parabolic_linear_example.cpp  paths_example.cpp  polynomial_example.cpp  quaternion_example.cpp  trapezoidal_example.cpp
cpp/examples/shared/: example_utils.hpp
cpp/include/interpolatecpp/: concepts.hpp  config.hpp  tridiagonal.hpp
cpp/include/interpolatecpp/bspline/: approximation_bspline.hpp  bspline.hpp  bspline_interpolator.hpp  bspline_parameters.hpp  cubic_bspline_interpolation.hpp  smoothing_cubic_bspline.hpp
cpp/include/interpolatecpp/motion/: double_s_trajectory.hpp  motion_types.hpp  parabolic_blend_trajectory.hpp  polynomial_trajectory.hpp  trapezoidal_trajectory.hpp
cpp/include/interpolatecpp/path/: circular_path.hpp  frenet_frame.hpp  linear_path.hpp  linear_traj.hpp
cpp/include/interpolatecpp/quat/: log_quaternion_interpolation.hpp  modified_log_quaternion_interpolation.hpp  quaternion.hpp  quaternion_spline.hpp  squad_c2.hpp
cpp/include/interpolatecpp/spline/: cubic_smoothing_spline.hpp  cubic_spline.hpp  cubic_spline_with_acc1.hpp  cubic_spline_with_acc2.hpp  smoothing_search.hpp  spline_parameters.hpp
cpp/src/: approximation_bspline.cpp  bspline.cpp  bspline_interpolator.cpp  circular_path.cpp  cubic_bspline_interpolation.cpp  cubic_smoothing_spline.cpp  cubic_spline.cpp  cubic_spline_with_acc1.cpp  cubic_spline_with_acc2.cpp  double_s_trajectory.cpp  frenet_frame.cpp  linear_path.cpp  linear_traj.cpp  log_quaternion_interpolation.cpp  modified_log_quaternion_interpolation.cpp  parabolic_blend_trajectory.cpp  polynomial_trajectory.cpp  quaternion.cpp  quaternion_spline.cpp  smoothing_cubic_bspline.cpp  smoothing_search.cpp  squad_c2.cpp  trapezoidal_trajectory.cpp
cpp/tests/: CMakeLists.txt  test_bspline.cpp  test_bspline_variants.cpp  test_concepts.cpp  test_cubic_smoothing_spline.cpp  test_cubic_spline.cpp  test_cubic_spline_with_acc1.cpp  test_cubic_spline_with_acc2.cpp  test_double_s_trajectory.cpp  test_parabolic_blend_trajectory.cpp  test_paths.cpp  test_polynomial_trajectory.cpp  test_quaternion.cpp  test_quaternion_spline.cpp  test_smoothing_search.cpp  test_trapezoidal_trajectory.cpp  test_tridiagonal.cpp
cpp/tests/shared/: test_data.hpp
docs/: algorithms.md  api-reference.md  api.md  architecture.md  changelog.md  contributing.md  examples.md  index.md  installation.md  quickstart.md  troubleshooting.md  user-guide.md
docs/tutorials/: motion-profiles.md  path-planning.md  quaternion-interpolation.md  spline-interpolation.md
examples/: b_spline_approx_ex.py  b_spline_cubic_ex.py  b_spline_ex.py  b_spline_interpolate_ex.py  b_spline_smooth_ex.py  c_s_smoot_search_ex.py  c_s_smoothing_ex.py  c_s_with_acc1_ex.py  c_s_with_acc2_ex.py  cubic_spline_ex.py  double_s_ex.py  frenet_frame_ex.py  lin_poly_parabolic_ex.py  log_quat_new_ex.py  main.py  polynomials_ex.py  protocols_ex.py  quat_visualization_ex.py  simple_paths_ex.py  trapezoidal_ex.py
interpolatepy/: __init__.py  _api.py  _backend.py  b_spline.py  b_spline_approx.py  b_spline_cubic.py  b_spline_interpolate.py  b_spline_smooth.py  c_s_smoot_search.py  c_s_smoothing.py  c_s_with_acc1.py  c_s_with_acc2.py  cubic_spline.py  double_s.py  frenet_frame.py  lin_poly_parabolic.py  log_quat.py  polynomials.py  protocols.py  quat_core.py  quat_interp.py  quat_spline.py  quat_visualization.py  simple_paths.py  trapezoidal.py  tridiagonal_inv.py  version.py
interpolatepy/_adapters/: __init__.py  _bspline.py  _direct.py  _motion.py  _paths.py  _quaternion.py  _spline.py
tests/: inv_test.py  test_b_spline.py  test_b_spline_variants.py  test_backend.py  test_cubic_spline.py  test_lin_poly_parabolic.py  test_linear.py  test_motion_profiles.py  test_path_planning.py  test_polynomials.py  test_protocols.py  test_quat_interp.py  test_quat_visualization.py  test_smoothing.py  test_squad_c2.py
